# deepseek-ui

./: .gitignore  .gitmodules  LICENSE  README.md  deepseek_ui.py  pyproject.toml
.streamlit/: config.toml
scripts/: start_ollama_server.py
