[project]
name = 'deepseek-ui'

[tool.basedpyright]
strict = ['deepseek_ui.py', 'scripts/start_ollama_server.py']
typeCheckingMode = 'basic'

[tool.pixi.workspace]
channels = ['pytorch', 'nvidia', 'conda-forge']
platforms = ['win-64']
preview = ['pixi-build']

[tool.pixi.pypi-options]
index-url = 'https://mirrors.cernet.edu.cn/pypi/web/simple'

[tool.pixi.dependencies]
ollama-python = '*'
pooch = '>=1.8.2'
pytorch-cuda = '>=11.0.0,<13.0.0a0'

# Taken from https://github.com/deepseek-ai/Janus/blob/main/pyproject.toml
python = '>=3.8.0'
pytorch = '>=2.0.1'
transformers = '>=4.38.2'
timm = '>=0.9.16'
accelerate = '*'
sentencepiece = '*'
attrdict = '*'
einops = '*'

[tool.pixi.dependencies.streamlit]
git = 'ssh://git@github.com/snekdesign/feedstocks'
subdirectory = 'streamlit'

[tool.pixi.dependencies.streamlit-scroll-to-top]
git = 'ssh://git@github.com/snekdesign/feedstocks'
subdirectory = 'streamlit-scroll-to-top'

[tool.pixi.pypi-dependencies.janus]
git = 'ssh://git@github.com/deepseek-ai/Janus'

[tool.pixi.tasks.setup]
cmd = 'python scripts/start_ollama_server.py'

[tool.pixi.tasks.start]
cmd = 'streamlit run deepseek_ui.py'
depends-on = ['setup']
