[project]
name = 'deepseek-ui'
requires-python = '>=3.9'

[tool.basedpyright]
strict = ['deepseek_ui.py', 'scripts/start_ollama_server.py']
typeCheckingMode = 'basic'

[tool.pixi.project]
channels = ['conda-forge']
platforms = ['win-64']

[tool.pixi.system-requirements]
cuda = '12'

[tool.pixi.dependencies]
ollama-python = '>=0.5.0'
pooch = '>=1.8.2'
pytorch-gpu = '>=2.6.0'  # CVE-2025-32434
streamlit = '>=1.43.0'

# Taken from https://github.com/deepseek-ai/Janus/blob/main/pyproject.toml
transformers = '>=4.38.2'
timm = '>=0.9.16'
accelerate = '*'
sentencepiece = '*'
attrdict = '*'
einops = '*'

[tool.pixi.pypi-dependencies]
janus = { git = 'ssh://git@github.com/deepseek-ai/Janus' }
streamlit-scroll-to-top = '>=0.0.4'

[tool.pixi.tasks.setup]
cmd = 'python scripts/start_ollama_server.py'

[tool.pixi.tasks.start]
cmd = 'streamlit run deepseek_ui.py'
depends-on = ['setup']
